--- a/.gitignore
+++ b/.gitignore
@@ -45,8 +45,8 @@ build-*
 dist/*
 docs/tmp.*
 docs/html/
-docs/man/xl.cfg.pod.5
-docs/man/xl.pod.1
+docs/man/xl.cfg.5.pod
+docs/man/xl.1.pod
 docs/man1/
 docs/man5/
 docs/man7/
