--- a/xen/arch/x86/mm/shadow/Makefile
+++ b/xen/arch/x86/mm/shadow/Makefile
@@ -1,6 +1,7 @@
 ifeq ($(CONFIG_SHADOW_PAGING),y)
 obj-y += common.o guest_2.o guest_3.o guest_4.o
 obj-$(CONFIG_HVM) += hvm.o
+obj-$(CONFIG_PV) += pv.o
 else
 obj-y += none.o
 endif
