travis: use python-dev instead of python2.7-dev
Xen build should be using default python now.

Signed-off-by: Wei Liu <wei.liu2@citrix.com>
Acked-by: Andrew Cooper <andrew.cooper3@citrix.com>

--- a/.travis.yml
+++ b/.travis.yml
@@ -44,7 +44,7 @@ addons:
             - zlib1g-dev
             - libncurses5-dev
             - libssl-dev
-            - python2.7-dev
+            - python-dev
             - xorg-dev
             - uuid-dev
             - libyajl-dev
